Доделана логика для пользователей + сделаны заготовки под логику для работы со счетами - Исправлена логика регистрации пользователя + добавлены проверки на существование аккаунтов с указанным логином/email - Реализована валидация dto'шек для авторизации и регистрации - Реализован обработчик ошибок
